Starting some styling and global styles, working on the header

--- a/short-stories/pocket-prose-client/src/app/layouts/header/header.component.html
+++ b/short-stories/pocket-prose-client/src/app/layouts/header/header.component.html
@@ -1,5 +1,11 @@
-<header>
+<header class="header">
   <nav class="navbar container">
-
+    <a  class="brand" href="">Pocket Prose</a>
+    <div class="serach">
+      <form class="search-form">
+        <input type="text" name="search" class="search-input" placeholder="Search Title, Author, or Tag">
+        <button type="submit" class="search-submit" disabled><i class="bx bx-search"></i></button>
+      </form>
+    </div>
   </nav>
 </header>
