--- a/short-stories/pocket-prose-client/src/app/layouts/header/header.component.css
+++ b/short-stories/pocket-prose-client/src/app/layouts/header/header.component.css
@@ -9,21 +9,10 @@
 }
 
 .navbar {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+  display: flex;
   align-items: center;
-  align-content: center;
-  height: auto;
-
+  justify-content: space-between;
   padding-top: 0.5rem;
-
-  @media only screen and (min-width: 62rem) {
-     grid-template-columns: repeat(3, minmax(0, 1fr));
-     width: 100%;
-     height: 4.25rem;
-     padding-top: 0;
-     margin: 0 auto;
-  }
 }
 
 .brand {
@@ -37,90 +26,42 @@
   color: var(--color-red-500);
 }
 
-.btn {
-  display: inline-block;
-  font-family: inherit;
-  font-size: 1rem;
-  font-weight: 500;
-  line-height: 1.5;
-  text-align: center;
-  vertical-align: middle;
-  white-space: nowrap;
-  user-select: none;
-  outline: none;
-  border: none;
-  border-radius: 0.25rem;
-  text-transform: unset;
-  transition: all 0.3s ease-in-out;
 
-  &-darken {
-     padding: 0.75rem 2rem;
-     color: var(--color-white-100);
-     background-color: var(--color-black-200);
-     box-shadow: var(--shadow-medium);
-  }
-
-  &-neutral {
-     padding: 0.75rem 2rem;
-     color: var(--color-black-500);
-     background-color: var(--color-white-100);
-     box-shadow: var(--shadow-medium);
-  }
+.input-container {
+	display: flex;
 }
 
-.search {
-  grid-column: span 2;
-  order: 3;
-  width: 100%;
-  height: auto;
-  margin: 0 auto;
-  padding-block: 1rem;
+::placeholder {
+  color: #757575;
+  opacity: 1;
+}
 
-  &-form {
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
-     max-width: 100%;
-     width: 100%;
-     height: auto;
-     padding-inline: 1.5rem;
-     border-radius: 3rem;
-     background: var(--color-white-200);
-  }
+.search-input {
+  background: #EEEEEE;
+  color: #212121;
+	vertical-align: middle;
+  font-size: 16px;
+  line-height: 2;
+  padding: 10px 20px;
+  border: 0;
+  outline: none;
+  box-shadow: inset 0 -1px 1px -1px #CCCCCC, inset 0 1px 1px -1px #CCCCCC, inset 1px 0 1px -1px #CCCCCC;
+}
 
-  &-input {
-     display: block;
-     font-family: inherit;
-     font-size: 1rem;
-     font-weight: normal;
-     line-height: inherit;
-     width: 100%;
-     height: 100%;
-     padding-block: 0.75rem;
-     border: none;
-     outline: none;
-     color: var(--color-black-500);
-     background: transparent;
-  }
+.search-submit {
+  background: #D500F9;
+  color: #FFFFFF;
+	vertical-align: middle;
+  padding: 0 20px;
+  border: 0;
+  outline: none;
+  cursor: pointer;
+}
 
-  &-submit {
-     display: block;
-     font-size: 1.25rem;
-     line-height: 1.5;
-     margin-top: 0.25rem;
-     color: var(--color-white-500);
-     background: transparent;
-  }
+.search-submit:hover {
+  background: #AB47BC;
+}
 
-  @media only screen and (min-width: 62rem) {
-     justify-self: center;
-     grid-column: initial;
-     order: initial;
-     width: 100%;
-     height: auto;
-
-     &-form {
-        max-width: 30rem;
-     }
-  }
+.search-submit i {
+  font-size: 24px;
 }
