--- a/short-stories/pocket-prose-client/src/styles.css
+++ b/short-stories/pocket-prose-client/src/styles.css
@@ -7,6 +7,10 @@
 
 }
 
+.wrapper {
+  width: 100%;
+}
+
 .container {
   max-width: 80rem;
   margin: 0 auto;
@@ -28,6 +32,6 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: var(--color-black-500);
-  background-color: var(--color-white-100);
+  color: black;
+  background-color: white;
 }
