Need to stop here for the night

--- a/short-stories/pocket-prose-client/src/app/layouts/header/header.component.html
+++ b/short-stories/pocket-prose-client/src/app/layouts/header/header.component.html
@@ -5,9 +5,10 @@
     <a  class="brand" href="">Pocket Prose</a>
     <form role="search" method="get" action="">
       <div class="input-container">
-        <input type="search" class="search-input" value="" name="s" placeholder="Search by Title, Author, or Genre" />
+        <input type="search" class="input" value="" name="search" placeholder="Search by Title, Author, or Genre" />
         <button type="submit" class="search-submit" name="submit"><i class="material-icons">search</i></button>
-      </div><!-- input-container -->
-    </form><!-- searchform -->
+      </div>
+      <a href="search">Advanced Search</a>
+    </form>
   </nav>
 </header>
