--- a/short-stories/pocket-prose-client/src/app/pages/search/search-page.component.html
+++ b/short-stories/pocket-prose-client/src/app/pages/search/search-page.component.html
@@ -1,1 +1,11 @@
-<p>search-page works!</p>
+<section class="wrapper">
+<div class="container">
+  <h1>Story Search</h1>
+  <div class="card">
+    <input> Test
+    <input type="search" class="input" value="" name="s" placeholder="Search by Title, Author, or Genre" />
+
+  </div>
+</div>
+
+</section>
