--- a/short-stories/pocket-prose-client/src/styles.css
+++ b/short-stories/pocket-prose-client/src/styles.css
@@ -4,20 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
 }
-
-.wrapper {
-  width: 100%;
-}
-
-.container {
-  max-width: 80rem;
-  margin: 0 auto;
-  padding: 0 1.25rem;
-  height: auto;
-}
-
 
 a, button {
   text-decoration: none;
@@ -34,4 +21,38 @@ body {
   line-height: 1.5;
   color: black;
   background-color: white;
+}
+
+
+section {
+  padding-top: 6rem;
+}
+
+.wrapper {
+  width: 100%;
+}
+
+.container {
+  max-width: 80rem;
+  margin: 0 auto;
+  padding: 0 1.25rem;
+  height: auto;
+}
+
+.card {
+  margin: auto;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  overflow: hidden;
+}
+
+.input {
+  background: #EEEEEE;
+  color: #212121;
+	vertical-align: middle;
+  font-size: 16px;
+  line-height: 2;
+  padding: 10px 20px;
+  border: 0;
+  outline: none;
+  box-shadow: inset 0 -1px 1px -1px #CCCCCC, inset 0 1px 1px -1px #CCCCCC, inset 1px 0 1px -1px #CCCCCC;
 }
