--- a/short-stories/pocket-prose-client/src/app/pages/search/search-page.component.html
+++ b/short-stories/pocket-prose-client/src/app/pages/search/search-page.component.html
@@ -1,9 +1,10 @@
 <section class="wrapper">
 <div class="container">
   <h1>Story Search</h1>
-  <div class="card">
-    <input> Test
-    <input type="search" class="input" value="" name="s" placeholder="Search by Title, Author, or Genre" />
+  <div class="card search-items">
+    <input type="search" class="input" value="" name="title" placeholder="Search by Title" />
+    <input type="search" class="input" value="" name="author" placeholder="Search by Author" />
+    <input type="search" class="input" value="" name="genre" placeholder="Search by Genre" />
 
   </div>
 </div>
